# artois

./: .gitignore  .scalafmt.conf  build.sbt  index.html  main.py  package-lock.json  package.json  pyproject.toml  script.js  vite.config.js
public/: main.py
src/artois/: index.html  main.py  script.js
src/artois.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/main/scala/artois/: ArtoisFrontend.scala
